welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:42: error: ')' expected but '}' found.
}
^PictureMono2:49: error: Unmatched closing brace '}' ignored here
     }
     ^